--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,10 +30,13 @@ warn_redundant_casts = true
 incremental = true
 namespace_packages = false
 
-# Uncomment to exclude modules from Mypy.
-# [[tool.mypy.overrides]]
-# module = []
-# ignore_missing_imports = true
+[[tool.mypy.overrides]]
+
+module = [
+    "mujoco",
+    "glfw",
+]
+ignore_missing_imports = true
 
 [tool.isort]
 
